...
                            ),
                          ),
                          Padding(
                            padding: EdgeInsetsDirectional.fromSTEB(
                                4.0, 0.0, 4.0, 16.0),
                            child: TextFormField(
                              key: ValueKey('EmailLogin_a2vw'),
                              controller: _model.emailLoginTextController,
                              focusNode: _model.emailLoginFocusNode,
                              onChanged: (_) => EasyDebounce.debounce(
                                '_model.emailLoginTextController',
                                Duration(milliseconds: 2000),
                                () => safeSetState(() {}),
...
                            ),
                          ),
                          Padding(
                            padding: EdgeInsetsDirectional.fromSTEB(
                                4.0, 0.0, 4.0, 12.0),
                            child: TextFormField(
                              key: ValueKey('PasswordLogin_xhtv'),
                              controller: _model.passwordLoginTextController,
                              focusNode: _model.passwordLoginFocusNode,
                              onChanged: (_) => EasyDebounce.debounce(
                                '_model.passwordLoginTextController',
                                Duration(milliseconds: 2000),
                                () => safeSetState(() {}),
...
                            ),
                          ),
                          Padding(
                            padding: EdgeInsetsDirectional.fromSTEB(
                                4.0, 0.0, 4.0, 0.0),
                            child: FFButtonWidget(
                              key: ValueKey('Button_ukx5'),
                              onPressed: () async {
                                logFirebaseEvent(
                                    'LOGIN_PAGE_PAGE_LOG_IN_BTN_ON_TAP');
                                logFirebaseEvent('Button_auth');
                                GoRouter.of(context).prepareAuthEvent();

...
                                    logFirebaseEvent('Text_navigate_to');

                                    context.pushNamed(
                                        AuthenticationPageWidget.routeName);
                                  },
                                  child: Text(
                                    key: ValueKey('Text_e8j0'),
                                    'Register Now',
                                    style: FlutterFlowTheme.of(context)
                                        .bodyMedium
                                        .override(
                                          font: GoogleFonts.inter(
                                            fontWeight: FontWeight.bold,
...
