...
                                        CrossAxisAlignment.start,
                                    children: [
                                      Padding(
                                        padding: EdgeInsetsDirectional.fromSTEB(
                                            4.0, 0.0, 4.0, 16.0),
                                        child: TextFormField(
                                          key: ValueKey('SignUpEmail_34qt'),
                                          controller:
                                              _model.signUpEmailTextController,
                                          focusNode:
                                              _model.signUpEmailFocusNode,
                                          onChanged: (_) =>
                                              EasyDebounce.debounce(
...
                                        ),
                                      ),
                                      Padding(
                                        padding: EdgeInsetsDirectional.fromSTEB(
                                            4.0, 0.0, 4.0, 12.0),
                                        child: TextFormField(
                                          key: ValueKey('SignUpPass_1unp'),
                                          controller:
                                              _model.signUpPassTextController,
                                          focusNode: _model.signUpPassFocusNode,
                                          onChanged: (_) =>
                                              EasyDebounce.debounce(
                                            '_model.signUpPassTextController',
...
                                        ),
                                      ),
                                      Padding(
                                        padding: EdgeInsetsDirectional.fromSTEB(
                                            4.0, 0.0, 4.0, 12.0),
                                        child: TextFormField(
                                          key: ValueKey('Confrim_baw4'),
                                          controller:
                                              _model.confrimTextController,
                                          focusNode: _model.confrimFocusNode,
                                          onChanged: (_) =>
                                              EasyDebounce.debounce(
                                            '_model.confrimTextController',
...
                                        ),
                                      ),
                                      Padding(
                                        padding: EdgeInsetsDirectional.fromSTEB(
                                            0.0, 32.0, 12.0, 0.0),
                                        child: FFButtonWidget(
                                          key: ValueKey('Button_nfto'),
                                          onPressed: () async {
                                            logFirebaseEvent(
                                                'AUTHENTICATION_SIGN_UP_BTN_ON_TAP');
                                            logFirebaseEvent('Button_auth');
                                            GoRouter.of(context)
                                                .prepareAuthEvent();
...
