...
                                                    ),
                                            indicatorColor:
                                                FlutterFlowTheme.of(context)
                                                    .primary,
                                            tabs: [
                                              Tab(
                                                text: 'Top',
                                              ),
                                              Tab(
                                                text: 'bottom',
                                              ),
                                              Tab(
                                                text: 'shoes',
                                              ),
                                            ],
                                            controller: _model.tabBarController,
...
                                        ),
                                      );
                                    },
                                  ).then((value) => safeSetState(() {}));
                                },
                                child: Container(
                                  key: ValueKey('Container_9xjj'),
                                  width: 70.0,
                                  height: 70.0,
                                  decoration: BoxDecoration(
                                    boxShadow: [
                                      BoxShadow(
                                        blurRadius: 20.0,
...
                                        'BASE_PAGE_Column_4rh1gaoa_ON_TAP');
                                    logFirebaseEvent('Column_navigate_to');

                                    context.pushNamed(YepWidget.routeName);
                                  },
                                  child: Column(
                                    key: ValueKey('Column_xapa'),
                                    mainAxisSize: MainAxisSize.max,
                                    mainAxisAlignment: MainAxisAlignment.center,
                                    crossAxisAlignment:
                                        CrossAxisAlignment.center,
                                    children: [
                                      Icon(
...
