...
                                    ),
                                  ),
                                  Expanded(
                                    child: Container(
                                      width: double.infinity,
                                      child: TextFormField(
                                        key: ValueKey('Name_hutz'),
                                        controller: _model.nameTextController,
                                        focusNode: _model.nameFocusNode,
                                        autofocus: false,
                                        obscureText: false,
                                        decoration: InputDecoration(
                                          hintText: 'Name...',
...
                                      color: Color(0xFF6C5CE7),
                                      size: 18.0,
                                    ),
                                  ),
                                  Expanded(
                                    child: TextFormField(
                                      key: ValueKey('CityforAi_d98p'),
                                      controller:
                                          _model.cityforAiTextController,
                                      focusNode: _model.cityforAiFocusNode,
                                      autofocus: false,
                                      obscureText: false,
                                      decoration: InputDecoration(
...
                          ),
                        ].divide(SizedBox(height: 6.0)),
                      ),
                    ].divide(SizedBox(height: 16.0)),
                  ),
                  FFButtonWidget(
                    key: ValueKey('FinshProfile_jgz2'),
                    onPressed: () async {
                      logFirebaseEvent('ONBOARDING_PAGE_FinshProfile_ON_TAP');
                      logFirebaseEvent('FinshProfile_backend_call');

                      await currentUserReference!.update(createUsersRecordData(
                        displayName: _model.nameTextController.text,
...
